TFR基础兼容完成

--- a/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
+++ b/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
@@ -1,7 +1,7 @@
 ﻿l_simp_chinese:
  gsk_main_event.1.a:0 "了解了"
  gsk_main_event.1.t:0 "感谢游玩本mod，第一次游玩须知"
- gsk_main_event.1.d:0 "本mod是一个基于东方Project世界观的二创mod，你可以通过决议来探索幻想乡的不同地区，在探索过程中你将遇见不同的事件，通过事件可以把东方的角色招募到你的国家当中并与她们互动。\n\n以下为注意事项：\n作者本人对东方了解不够深入，mod中的所有对话均为二设，可能存在人设崩坏等问题，请以自己心中的幻想乡为准。\n如果不清楚每位人物该如何招募，在steam创意工坊详情页或者角色任务决议中有按钮点击后可以查看所有角色获取路线。\nMOD增加的军工组织中有两个强度较强，可以在决议界面选择开启或关闭，且月都科技军工组织特质§R仅可以§!通过举办月都万象展来提升。\n§R通过月都科技研究的项目请不要随意变更研究的军工组织§!，可能导致月都debuff无法消除。\n§R注意，如果将要发生随机清洗将领的事件，可以在招募事件中选择第二个选项暂缓招募，不然可能使角色失效。§!"
+ gsk_main_event.1.d:0 "本mod是一个基于东方Project世界观的二创mod，你可以通过决议来探索幻想乡的不同地区，在探索过程中你将遇见不同的事件，通过事件可以把东方的角色招募到你的国家当中并与她们互动。\n\n以下为注意事项：\n作者本人对东方了解不够深入，mod中的所有对话均为二设，可能存在人设崩坏等问题，请以自己心中的幻想乡为准。\n如果不清楚每位人物该如何招募，在steam创意工坊详情页或者角色任务决议中有按钮点击后可以查看所有角色获取路线。\nMOD增加的军工组织中有两个强度较强，可以在决议界面选择开启或关闭，且月都科技军工组织特质§R仅可以§!通过举办月都万象展来提升。\n§R通过月都科技研究的项目请不要随意变更研究的军工组织§!，可能导致月都debuff无法消除。\n§RTFR兼容须知：类似于美国内战事件会更换游玩国家tag，此时幻想乡决议会丢失进度,可以等内战后再点§!"
  gsk_active_the_system:0 "派出一支队伍去探索神秘地点"
  gsk_active_system:0 "探索幻想乡"
  gsk_news_event.2.t:0 "探险队发现神秘地点"
@@ -192,7 +192,7 @@
  gsk_race_heavenly_dog_desc:0 ""
  aya_commander_peculiarity_desc:0 ""
  advisor_aya_desc:0 "射命丸文是天狗之中速度很快的鸦天狗。手持相机，在幻想乡各处奔走，记录下各种有趣的事件。虽说是鸦天狗，外表和人类并无太大差别。随身带着的道具是团扇、相机和文花帖。团扇是起风的道具，一扇能刮倒屋子，二扇能刮倒大树，三扇能将旅人的斗篷吹飞。是天狗的武器。相机是天狗的另一件武器。能将瞬间景象拍下的必杀武器（×1拍摄速度也十分地惊人。）。拍下的相片会登载在新闻报纸上。文花帖是将能成为新闻报道的题材记录起来的天狗的笔记本。里面混杂了各种相片和手写文字（×2天狗的手写体意外地可爱。）。"
- moriya_shrine_quest1:0 "守矢神社任务:向神奈子展示外界的核聚变炉。"
+ moriya_shrine_quest1:0 "守矢神社任务:向神奈子展示外界的新型核熔炉。"
  gsk_equipment_frog_eq_tech:0 "青蛙头饰"
  gsk_equipment_frog0:0 "青蛙头饰"
  gsk_equipment_frog0_desc:0 "以普遍理性而言，这个装备是没有任何用处的，但是诹访子大人会高兴"
@@ -248,7 +248,7 @@
  gsk_advisor_yuyuko:0 "幽冥楼阁的亡灵少女"
  advisor_yuyuko_desc:0 "她是住在冥界白玉楼的西行寺家的大小姐。她以亡灵的身姿存世千年以上，是极其少见的长寿（×1长寿？）亡灵。她对人无怨恨，再加上能统制幽灵，阎魔就命令她管理幽灵。而好处就是能永远住在冥界。她的样子和是人类时没太大差别，据说只是肌肤和发色变得有些淡薄。她的身体封印在白玉楼，所以永远无法进行供养。也就是说只能以亡灵的姿态永远生存（×2生存？）下去。她的性格十分慢性子，已不记得自己来冥界已多久了。还有就是当天早餐的内容也不记得（×3是装傻的吧。）。"
  hakugyokurou_quest0:0 "白玉楼任务:喂饱幽幽子大人吧！"
- hakugyokurou_quest0_tooltip:0 "幽幽子大人会从§Y步兵武器，牵引式火炮，支援装备，卡车，青蛙头饰§!中随机选取一个吃掉一部分库存，要是你库存不够，幽幽子大人会吃不饱的。\n什么，你问我为什么幽幽子能吃掉武器，可恶，在幻想乡可不能被常识所束缚啊！"
+ hakugyokurou_quest0_tooltip:0 "幽幽子大人会从§Y步兵武器，火炮，指挥装备，摩托化运输，青蛙头饰§!中随机选取一个吃掉一部分库存，要是你库存不够，幽幽子大人会吃不饱的。\n什么，你问我为什么幽幽子能吃掉武器，可恶，在幻想乡可不能被常识所束缚啊！"
  gsk_hire_event.91.t:0 "幽幽子大人吃掉了头饰！"
  gsk_hire_event.92.t:0 "幽幽子大人吃掉了火炮！"
  gsk_hire_event.93.t:0 "幽幽子大人吃掉了卡车！"
@@ -471,7 +471,7 @@
  gsk_mio_header_armor_department:0 "装甲科技"
  gsk_mio_header_light_department:0 "轻型坦克"
  gsk_mio_header_medium_department:0 "中型坦克"
- gsk_mio_header_heavy_department:0 "重型坦克"
+ gsk_mio_header_heavy_department:0 "通用直升机"
  gsk_mio_header_mechanized_department:0 "机械化装备"
  gsk_kapa_design_bureau00:0 "河童科技天下第一"
  gsk_kapa_design_bureau01:0 "强化车身"
@@ -483,14 +483,14 @@
  gsk_kapa_design_bureau07:0 "AT立场"
  gsk_kapa_design_bureau08:0 "利用通背"
  gsk_kapa_design_bureau09:0 "河童加班"
- gsk_kapa_design_bureau10:0 "中型坦克专精"
- gsk_kapa_design_bureau11:0 "重型坦克专精"
+ gsk_kapa_design_bureau10:0 "主站坦克专精"
+ gsk_kapa_design_bureau11:0 "通用直升机专精   §R目前在TFR中,直升机速度有bug§!"
  gsk_kapa_design_bureau12:0 "弹药架改装"
  gsk_kapa_design_bureau13:0 "悬挂改进"
- gsk_kapa_design_bureau14:0 "炮身加固"
+ gsk_kapa_design_bureau14:0 "反坦克武器"
  gsk_kapa_design_bureau15:0 "步兵支援武器"
  gsk_kapa_design_bureau16:0 "炮塔机枪"
- gsk_kapa_design_bureau17:0 "强行突破"
+ gsk_kapa_design_bureau17:0 "步兵支援武器"
  gsk_kapa_design_bureau18:0 "运输载具生产"
  gsk_kapa_design_bureau19:0 "重视装甲车"
  gsk_kapa_design_bureau20:0 "装甲列车强化"
@@ -521,6 +521,7 @@
  gsk_hakurei_design_bureau12:0 "我们的陆地"
  gsk_hakurei_design_bureau13:0 "我们的海洋"
  gsk_hakurei_design_bureau14:0 "中型飞机专精"
+ gsk_hakurei_design_bureau15:0 "灵力防御"
  gsk_hakurei_design_bureau16:0 "简化材料"
  gsk_hakurei_design_bureau17:0 "多用途战机"
  gsk_hakurei_design_bureau18:0 "专注轰炸"
