添加古明地姐妹间谍

--- a/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
+++ b/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
@@ -215,6 +215,10 @@
  gsk_race_satori:0 "种族:觉"
  koishi_commander_peculiarity:0 "紧闭的恋之瞳"
  satori_commander_peculiarity:0 "怨灵也为之惧怯的少女"
+ koishi_spy_peculiarity:0 "紧闭的恋之瞳"
+ satori_spy_peculiarity:0 "怨灵也为之惧怯的少女"
+ koishi_spy_peculiarity_desc:0 ""
+ satori_spy_peculiarity_desc:0 ""
  gsk_advisor_satori:0 "读心程度的能力"
  satori_commander_peculiarity_desc:0 ""
  advisor_satori_desc:0 "在到处都是被嫌恶者的旧地狱中，在这群体中有一类特别惹人讨厌的妖怪，那就是觉了。尽管当时是由于无法跟人类以及妖怪和谐共处从而逃到旧地狱去的，但结果，还是被旧地狱的妖怪所讨厌。那理由，就是来自她的读心能力。\n无论谁都不想要跟会读心的家伙碰面啦。她在旧地狱中一个名为地灵殿的地方把自己完全隔离，放弃跟任何人进行交流。地灵殿基本上是不会有客人的。她对无法说话的灵魂一样可以读心。正因为这样连怨灵都对她避之不及。为了对怨灵害怕她这件事有效利用，她如今负责管理着仍残留在灼热地狱遗址内的怨灵。由于无法对她隐瞒任何事，也是等于不会有人敢去逆她的意去作乱。顺带一提，地灵殿就是建在灼热地狱遗址的正上方。\n她有一个妹妹。"
@@ -684,10 +688,13 @@
  kosuzu_keine_commander_peculiarity:0 "慧音老师的协助"
  gsk_human_village_quest1_idea:0 "小铃的训练用部队"
  gsk_human_village_quest1_idea0:0 "小铃的训练经验"
- gsk_human_village_quest1_idea1:0 "小铃的训练经验"
- gsk_human_village_quest1_idea2:0 "小铃的训练经验"
- gsk_human_village_quest1_idea3:0 "小铃的训练经验"
+ gsk_human_village_quest1_idea1:0 "$gsk_human_village_quest1_idea0$"
+ gsk_human_village_quest1_idea2:0 "$gsk_human_village_quest1_idea0$"
+ gsk_human_village_quest1_idea3:0 "$gsk_human_village_quest1_idea0$"
  gsk_debug_all_desc:0 "此决议仅用于开发，仅在debug模式下可见"
+ GSK: "幻想乡"
+ GSK_DEF: "幻想乡"
+ GSK_ADJ: "幻想乡" 
  remilia_name:0 "蕾米莉亚·斯卡蕾特"
  remilia_name:0 "蕾米莉亚·斯卡蕾特"
  remilia_name:0 "蕾米莉亚·斯卡蕾特"
