招募系统大改

--- a/localisation/english/Gensokyo_l_english.yml
+++ b/localisation/english/Gensokyo_l_english.yml
@@ -2,7 +2,7 @@
   gsk_main_event.1.a:0 "Understood"
   gsk_main_event.1.t:0 "Thank you for playing this mod. Tips for first time players"
   gsk_main_event.1.d:0 "This mod is a secondary mod based on the world view of Touhou Project. You can explore different areas of Gensokyo through decisions. During the exploration, you will encounter different events. Through events, you can recruit Touhou characters to your country and interact with them.\n\nThe following are precautions:\nThe author does not have a deep understanding of Touhou. All dialogues in the mod are secondary settings. There may be problems such as character collapse. Please refer to the Gensokyo in your mind.\nIf you are not sure how to recruit each character, there is a button in the steam workshop details page or the character task decision to view all character acquisition routes.\nThere are two strong military and industrial organizations added by the MOD. You can choose to turn them on or off in the decision interface, and the characteristics of the Yuedu Technology Military and Industrial Organization §Rcan only be improved§! by holding the Yuedu Vientiane Exhibition.\n§RPlease do not change the military and industrial organization researched by Yuedu Technology at will§!, which may cause the Yuedu debuff to be unable to be eliminated.\n§RNote that if a random purge of generals is about to occur, you can choose the second option in the recruitment event to postpone recruitment, otherwise the character may become invalid.§!"
-  gsk_active_the_system:0 "Send a team to explore the mysterious location"
+  gsk_active_the_system:0 "Set up an expedition to explore the mysterious place"
   gsk_active_system:0 "Explore Gensokyo"
   gsk_news_event.2.t:0 "Expedition team discovers mysterious site"
   gsk_news_event.2.d:0 "A private expedition team claimed that they encountered a dilapidated shrine while passing through a forest in Japan. It looked like no one had lived there for a long time. However, when they were about to rest at the shrine, the whole team felt uncomfortable. Everyone's head was dizzy, as if someone had changed their cognition. When they woke up again, they found that they were near a village.\n\n"When we woke up, we found that we were right at the edge of the forest, and there was a village next to it. However, this was too strange. There was such a village in the 20th century. The people in the village knew almost nothing about the current world. They called this village the Human Village, and they also firmly believed that there were all kinds of monsters and gods in this world. However, the villagers here were warm and hospitable. Under the leadership of a purple-haired girl? We walked out of the forest. She also said that she was a little bored recently and hoped that more people from the outside world would come to this village to visit."\n ——Self-report from the expedition leader"
@@ -105,6 +105,7 @@
   gsk_advisor_akyuu:0 "Memories of Gensokyo"
   gsk_write_history_idea0:0 "We will be the generation that writes history"
   gsk_decision_description_t:0 "This decision is a task interface. After contacting the characters in Gensokyo, they will have some needs, which you can view in this interface. After completing the task, you will receive their rewards to help your country develop or you can meet new characters through their introductions.\nYou can see the conditions for completing the task in the description of the decision. Some tasks require you to consume political points to actively click to trigger events to complete, while tasks that do not require political points will automatically trigger events to obtain rewards after completion. You can choose whether to hide the task completion prompt event in the following decision"
+  gsk_active_system_desc:0 "If you want to recruit Fantasyland characters, you need to provide political and human support to establish a liaison, and then send a certain liaison to maintain contact with the Fantasyland characters. \n§Y The current number of available contacts is:[?gsk_var_number_of_contact]§!"
   gsk_recruit_character_interaction_vis:0 "Show mission completion notification events"
   gsk_recruit_character_interaction_unvis:0 "Hide Mission Completion Event"
   human_village_quest0:0 "Aqiu and Huiyin's quest: We will be the generation that writes history!"
@@ -621,7 +622,7 @@
   gsk_embodiment_idea_sub2:0 "The Pressure from the Scarlet Devil Mansion"
   gsk_increase_embodiment_idea.tt:0 "§YYour subjects will provide you with increased factory and resource trade subsidies§!"
   shikieiki_name:0 "Shikiei-hime Yamasanadu"
-  gsk_race_yama:0 "Yama"
+  gsk_race_yama:0 "Race: Yama"
   shikieiki_commander_peculiarity:0 "Paradise's Supreme Judge"
   shikieiki_is_recruit_flag:0 "Shiki Eiki has been recruited"
   gsk_advisor_shikieiki:0 "The ability to judge right from wrong"
@@ -695,13 +696,16 @@
   GSK: "Gensokyo"
   GSK_DEF: "Gensokyo"
   GSK_ADJ: "Gensokyo" 
-  remilia_name:0 "Remilia Scarlet"
-  remilia_name:0 "Remilia Scarlet"
-  remilia_name:0 "Remilia Scarlet"
-  remilia_name:0 "Remilia Scarlet"
-  remilia_name:0 "Remilia Scarlet"
-  remilia_name:0 "Remilia Scarlet"
-  remilia_name:0 "Remilia Scarlet"
-  remilia_name:0 "Remilia Scarlet"
-  remilia_name:0 "Remilia Scarlet"
+ gsk_begin_add_contact:0 "Start investing in a liaison"
+ gsk_number_of_expeditions_1_tt:0 "At least §Y1§! spare expedition"
+ gsk_number_of_expeditions_2_tt:0 "At least §Y2§! spare expedition"
+ gsk_number_of_expeditions_3_tt:0 "At least §Y3§! spare expedition"
+ gsk_number_of_expeditions_4_tt:0 "At least §Y4§! spare expedition"
+ gsk_number_of_expeditions_5_tt:0 "At least §Y5§! spare expedition"
+ gsk_number_of_expeditions_6_tt:0 "At least §Y6§! spare expedition"
+ gsk_add_contact_mission:0 "We're setting up a liaison..."
+ gsk_end_add_contact:0 "Stop investing in a liaison"
+ gsk_add_contact_mission_tt:0 "§YNumber of liaison staff：§!§G+1§!"
+ gsk_dym_add_contact:0 "Invest in a liaison"
+ gsk_begin_add_contact_flag:0 "Stop investing in a liaison"
  
