--- a/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
+++ b/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
@@ -2,7 +2,7 @@
  gsk_main_event.1.a:0 "了解了"
  gsk_main_event.1.t:0 "感谢游玩本mod，第一次游玩须知"
  gsk_main_event.1.d:0 "本mod是一个基于东方Project世界观的二创mod，你可以通过决议来探索幻想乡的不同地区，在探索过程中你将遇见不同的事件，通过事件可以把东方的角色招募到你的国家当中并与她们互动。\n\n以下为注意事项：\n作者本人对东方了解不够深入，mod中的所有对话均为二设，可能存在人设崩坏等问题，请以自己心中的幻想乡为准。\n如果不清楚每位人物该如何招募，在steam创意工坊详情页或者角色任务决议中有按钮点击后可以查看所有角色获取路线。\nMOD增加的军工组织中有两个强度较强，可以在决议界面选择开启或关闭，且月都科技军工组织特质§R仅可以§!通过举办月都万象展来提升。\n§R通过月都科技研究的项目请不要随意变更研究的军工组织§!，可能导致月都debuff无法消除。\n§R注意，如果将要发生随机清洗将领的事件，可以在招募事件中选择第二个选项暂缓招募，不然可能使角色失效。§!"
- gsk_active_the_system:0 "派出一支队伍去探索神秘地点"
+ gsk_active_the_system:0 "建立一支探险队去探索神秘地点"
  gsk_active_system:0 "探索幻想乡"
  gsk_news_event.2.t:0 "探险队发现神秘地点"
  gsk_news_event.2.d:0 "一个私人探险队声称他们在日本通过森林时遇到了一个破败的神社，那里看起来很久都无人居住了，但是当他们准备暂时在神社歇脚时，整个队伍感受到了不适，每个人的头脑都昏昏沉沉的，仿佛有人更改了他们的认知，当他们再次清醒时发现他们到了一个村落附近。\n\n“我们醒来时发现我们正好在森林边界，旁边正好有个村子，但是，这太奇怪了，在20世纪居然还有那样的村落，村子里的人对于当今世界几乎一无所知，他们自称这个村落叫人间之里，并且还坚信这个世界有各种妖怪神明，不过这里的村民倒是热情好客，在一位紫发少女？的带领下我们走出了森林，她还表示最近有点无聊，挺希望外界的人多来这个村子逛逛。”\n                                                             ——来自探险队队长的自诉"
@@ -11,7 +11,7 @@
  gsk_main_event.21.d:0 "    “我们已经在这个地方呆了有一段时间了，抱歉现在才联系您，因为在这里似乎难以使用无线电。我们在自称人间之里的村落中有位道具店老板的帮助下才得以发出电报。\n\n首先，我们不得不承认，这实在是个了不起的地方，在这里，我们见到了货真价实的妖怪，兽人，甚至是神明。这是个无法用常理解释的世界，首长，请相信我们，这个地方值得继续探索。这个村子的书店店长给了我们附近的地图，我们希望您能立刻批准我们前往其他地方探索。”"
  gsk_main_event.21.tt:0 "§Y我们可以在决议列表中选择探险队去幻想乡不同的地方探索，根据探索的地方不同将遇见不同的角色§!"
  gsk_main_event.21.a:0 "有趣，让我看看你们的下一站..."
- embodiment_of_Scarlet_Devil:0 "让探险队前往探访红魔馆"
+ embodiment_of_Scarlet_Devil:0 "与探访红魔馆取得联系"
  gsk_main_event.30.t:0 "来自红魔馆的联系"
  gsk_main_event.30.d:0 "“你好呀，人类”\n\n你看到一位少女的投影出现在你的眼前，对方尽管身形是位少女，但她的一举一动都充满了威严，而且在她的旁边，你看到一旁的探险队被五花大绑地丢在地上，你不由得严肃面对这位少女\n\n“你们闯入了我的领地，但庆幸我对你们带着的红茶很感兴趣，所以他们捡回了一条命，听说你们来自外界，是吗？”\n\n你正准备回话，但你很聪明，你发现了不对劲，为什么你能跟远方的人物面对面通话呢，不对，你意识到不应该在意这些细节，为什么？好吧，只是因为mod作者实在想不出什么好的剧情了，将就着玩吧。(hh，再次感谢游玩)\n\n“是的，在你们看来我们正是来自外界，我首先为我们私闯领地表达歉意。”\n\n“那么，你们那还有这种红茶吗，听你们伙伴聊外面好像好有趣欸。”\n\n“额，如果您不介意的话，我们可以为你献上更多红茶作为赔礼，”\n\n“欸，咲夜咲夜，我能出去看看吗，外面好像挺好玩欸，我想去我想去——大小姐希望如此的话，我这就去收拾行李”\n\n还未等你将话说完，这位少女便催促这她一旁的管家出发。"
  gsk_main_event.30.a:0 "不如您来我们国家担任顾问吧"
@@ -104,7 +104,8 @@
  gsk_advisor_keine:0 "人民教师"
  gsk_advisor_akyuu:0 "幻想乡的记忆"
  gsk_write_history_idea0:0 "我们将是书写历史的一代人"
- gsk_decision_description_t:0 "该决议为任务界面，在与幻想乡角色取得联系后，她们都会有一些需求，你可以在这个界面查看。完成任务后，你会获得她们的回报协助你的国家发展或是可以通过她们的介绍邂逅新角色。\n你可以在决议的介绍中看到完成任务的条件，有些任务需要你消耗政治点主动点击触发事件完成，而无需政治点的任务会在达成后自动触发事件获得奖励，你可以在下面的决议中选择是否隐藏任务完成提示事件"
+ gsk_decision_description_t:0 "该决议为任务界面，在与幻想乡角色取得联系后，她们都会有一些小任务，你可以在这个界面查看。完成任务后，你会获得她们的回报协助你的国家发展或是可以通过她们的介绍邂逅新角色。决议右下角的政府图标可以切换协助玩家国家的幻想乡角色(待完成)"
+ gsk_active_system_desc:0 "如果想要招募幻想乡角色，你需要提供政治和人力支持以建立联络员，之后派出一定的联络员与幻想乡的角色保持联系。\n§Y当前空余联络员数量为：[?gsk_var_number_of_contact]§!"
  gsk_recruit_character_interaction_vis:0 "显示任务完成提示事件"
  gsk_recruit_character_interaction_unvis:0 "隐藏任务完成提示事件"
  human_village_quest0:0 "阿求与慧音任务:我们将是书写历史的一代人！"
@@ -226,9 +227,9 @@
  koishi_commander_peculiarity_desc:0 ""
  advisor_koishi_desc:0 "跟姐姐觉一样的妖怪，觉。只不过她是一个把自己的内心关闭了，没办法读出他人的内心的觉。虽然她不会读心所以也不会招人讨厌，但由于自己的心也是空白一片，同样的谁都不会喜欢她。直到她的身影进入视线范围内为止，没人能够察觉到她的存在。也有就算她的身影映入眼中，仍然会觉得她并不存在（×1 就像路边石子那样的存在。）当她从视线范围消失，就会立即忘掉。\n如果了解姐姐觉的存在，那么妹妹恋也会很容易认识到。跟姐姐不一样，她并不被动物所喜欢，但也不被讨厌。这样的恋让姐姐觉非常的担心。由于她没有内心因此她的姐姐也无法读出她的想法，但同样她也无法从姐姐的心中消除自己的存在。如此她的性格也是空洞的，跟姐姐一样难以进行交流。"
  gsk_race_satori_desc:0 ""
- gsk_chireiden:0 "让探险队探访地灵殿"
+ gsk_chireiden:0 "与地灵殿取得联系"
  gsk_chireiden_2:0 "邀请古明地姐妹前来"
- gsk_hakugyokurou:0 "让探险队探访白玉楼"
+ gsk_hakugyokurou:0 "与白玉楼取得联系"
  gsk_main_event.90.a.tt:0 "§Y妖梦，幽幽子将成为将领§!"
  gsk_hakugyokurou_2:0 "请幽幽子，妖梦前来"
  yuyuko_is_recruit_flag:0 "西行寺幽幽子已经招募"
@@ -277,7 +278,7 @@
  yuyuko_commander_peculiarity3:0 "华胥的亡灵"
  hakugyokurou_quest1:0 "白玉楼任务:吃不够！！"
  hakugyokurou_quest2:0 "白玉楼任务:还吃不够！！！"
- gsk_eientei:0 "让探险队探访迷途竹林"
+ gsk_eientei:0 "与迷途竹林取得联系"
  gsk_eientei_2:0 "请兔子们前来"
  reisen_is_recruit_flag:0 "铃仙已经招募"
  reisen_name:0 "铃仙·优昙华院·因幡"
@@ -397,8 +398,8 @@
  tenshi_commander_peculiarity_desc:0 ""
  yuka_commander_peculiarity:0 "四季的鲜花之主"
  yuka_commander_peculiarity_desc:0 ""
- gsk_other_role_recruitment0:0 "展开其他角色招募选项"
- gsk_other_role_recruitment1:0 "关闭其他角色招募选项"
+ gsk_other_role_recruitment0:0 "§Y展开其他角色招募选项§!"
+ gsk_other_role_recruitment1:0 "§Y关闭其他角色招募选项§!"
  gsk_other_role_recruitment00:0 "招募多多良小伞成为海军将领"
  gsk_other_role_recruitment01:0 "招募秦心成为海军将领"
  gsk_other_role_recruitment04:0 "招募风见幽香成为将领"
@@ -621,7 +622,7 @@
  gsk_embodiment_idea_sub2:0 "红魔馆的威压"
  gsk_increase_embodiment_idea.tt:0 "§Y你的附属国将会为你提供更多的工场和资源贸易补贴§!"
  shikieiki_name:0 "四季映姬·夜摩仙那度"
- gsk_race_yama:0 "阎魔"
+ gsk_race_yama:0 "种族:阎魔"
  shikieiki_commander_peculiarity:0 "乐园的最高裁判长"
  shikieiki_is_recruit_flag:0 "四季映姬已经招募"
  gsk_advisor_shikieiki:0 "判断是非黑白程度的能力"
@@ -695,13 +696,18 @@
  GSK: "幻想乡"
  GSK_DEF: "幻想乡"
  GSK_ADJ: "幻想乡" 
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ gsk_begin_add_contact:0 "开始投资建立联络员"
+ gsk_number_of_expeditions_1_tt:0 "至少有§Y1§!位空闲的联络员"
+ gsk_number_of_expeditions_2_tt:0 "至少有§Y2§!位空闲的联络员"
+ gsk_number_of_expeditions_3_tt:0 "至少有§Y3§!位空闲的联络员"
+ gsk_number_of_expeditions_4_tt:0 "至少有§Y4§!位空闲的联络员"
+ gsk_number_of_expeditions_5_tt:0 "至少有§Y5§!位空闲的联络员"
+ gsk_number_of_expeditions_6_tt:0 "至少有§Y6§!位空闲的联络员"
+ gsk_add_contact_mission:0 "正在建立联络员中..."
+ gsk_end_add_contact:0 "停止投资建立联络员"
+ gsk_add_contact_mission_tt:0 "联络员数量：§G+1§!"
+ gsk_dym_add_contact:0 "投资建立联络员"
+ gsk_begin_add_contact_flag:0 "停止建立联络员"
  remilia_name:0 "蕾米莉亚·斯卡蕾特"
  remilia_name:0 "蕾米莉亚·斯卡蕾特"
  remilia_name:0 "蕾米莉亚·斯卡蕾特"
