feat:add scientist

--- a/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
+++ b/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
@@ -708,6 +708,64 @@
  gsk_add_contact_mission_tt:0 "联络员数量：§G+1§!"
  gsk_dym_add_contact:0 "投资建立联络员"
  gsk_begin_add_contact_flag:0 "停止建立联络员"
+ gsk_change_secretary_tt:0 "可以通过消耗Fomu来更换政府秘书"
+ gsk_choose_leaders_box_title:0 "§Y幻想乡内阁§!"
+ gsk_choose_leaders_box_title_desc:0 "§C当我们与对应的车万阵营取得联系并招募的对应的角色时，便可以邀请她们来当我们的政府秘书啦!\n在政府界面左上角的按钮可以改变显示国家元首与秘书的头像§!"
+ pre_button_tt:0 "上一页"
+ next_button_tt:0 "下一页"
+ choose_scarlet_devil_button_tt:0 "红魔馆"
+ choose_human_village_button_tt:0 "人间之里"
+ choose_hakurei_shrine_button_tt:0 "博丽神社"
+ choose_moriya_button_tt:0 "守矢神社"
+ choose_chireiden_button_tt:0 "地灵殿"
+ choose_hakugyokurou_button_tt:0 "白玉楼"
+ choose_eientei_button_tt:0 "永远亭"
+ choose_other_button_tt:0 "其他角色"
+ scientist_trait_patchouli:0 "$patchouli_commander_peculiarity$"
+ scientist_trait_reimu:0 "$reimu_commander_peculiarity$"
+ scientist_trait_kanako:0 "$kanako_commander_peculiarity$"
+ scientist_trait_youmu:0 "$youmu_commander_peculiarity$"
+ scientist_trait_yagokoro:0 "$yagokoro_commander_peculiarity$"
+ scientist_trait_aya:0 "$aya_commander_peculiarity$"
+ scientist_trait_akyuu:0 "$akyuu_commander_peculiarity$"
+ scientist_trait_keine:0 "$keine_commander_peculiarity$"
+ scientist_trait_patchouli_desc:0 "§L红魔馆无可争议的头脑，天才中的天才§!"
+ scientist_trait_reimu_desc:0 "§L虽然灵梦有着在空中飞行程度的能力，但是她真的会认真科研吗...§!"
+ scientist_trait_kanako_desc:0 "§L守失所供奉的战争之神§!"
+ scientist_trait_youmu_desc:0 "§L喂饱幽幽子也不比科研简单§!"
+ scientist_trait_yagokoro_desc:0 "§L曾经的月之贤者，现在也被尊为月之头脑§!"
+ scientist_trait_aya_desc:0 "§L「无双风神」！§!"
+ scientist_trait_akyuu_desc:0 "§L第九代御阿礼之子，稗田家的家主，幻想乡的书记§!"
+ scientist_trait_keine_desc:0 "§L寺子屋的老师§!"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ remilia_name:0 "蕾米莉亚·斯卡蕾特"
  remilia_name:0 "蕾米莉亚·斯卡蕾特"
  remilia_name:0 "蕾米莉亚·斯卡蕾特"
  remilia_name:0 "蕾米莉亚·斯卡蕾特"
