--- a/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
+++ b/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
@@ -204,7 +204,7 @@
  sanae_commander_peculiarity1:0 "来自诹访子大人的协助"
  sanae_commander_peculiarity0_desc:0 ""
  sanae_commander_peculiarity1_desc:0 ""
- satori_name:0 " 古明地觉"
+ satori_name:0 "古明地觉"
  koishi_name:0 "古明地恋"
  gsk_main_event.80.t:0 "怨灵也为之惧怯的少女"
  gsk_main_event.80.d:0 "“地灵殿来客人了？真是稀奇”\n队伍在通过漫长的走廊后抵达了最后的房间。你只看到一位粉发的少女坐在窗边，她的眼中是好奇和期待的光芒。她身穿一件蓝色带有白色蕾丝边的连衣裙，裙子上还绣有精致的黄色心形图案。女孩身旁还有众多宠物围绕，整个房间充满了文艺和浪漫的氛围。完全无法让人相信这是位连怨灵也为之惧怯的少女。\n\n“不必解释，情况我都了解，连我身旁的宠物都说我是否太过封闭了，也许我也该像妹妹那样多出去走走呢。”"
@@ -337,6 +337,7 @@
  gsk_equipment_houraisan_med0_desc:0 "蓬莱提神药，可在决议中用于角色，使角色领导的师的数量提升"
  gsk_equipment_houraisan_med_desc:0 "蓬莱提神药，可在决议中用于角色，使角色领导的师的数量提升"
  eientei_quest2:0 "展开角色列表，选择角色使用蓬莱提神药"
+ eientei_quest2_desc:0 "§R现在可以在角色特质分配界面中，在原版特质下直接选择特质激活，保留此决议为了防止其他mod冲突无法选中特质§!"
  eientei_quest2.tt:0 "使用后使角色领导的师的数量提升，每个角色可以使用三次哦"
  eientei_quest3:0 "关闭角色列表"
  gsk_role_list_use_all0:0 "依次为所有未使用过蓬莱药的角色使用一次蓬莱提神药"
@@ -708,6 +709,12 @@
  gsk_add_contact_mission_tt:0 "联络员数量：§G+1§!"
  gsk_dym_add_contact:0 "投资建立联络员"
  gsk_begin_add_contact_flag:0 "停止建立联络员"
+ gsk_begin_add_fumo:0 "制作更多Fumo！"
+ gsk_add_fumo_mission:0 "Fumo锐意制作中..."
+ gsk_end_add_fumo:0 "停止制作Fumo"
+ gsk_add_fumo_mission_tt:0 "Fumo数量：§G+1§!"
+ gsk_dym_add_fumo:0 "制作Fumo经费"
+ gsk_begin_add_fumo_flag:0 "停止制作Fumo"
  gsk_change_secretary_tt:0 "可以通过消耗Fomu来更换政府秘书"
  gsk_choose_leaders_box_title:0 "§Y幻想乡内阁§!"
  gsk_choose_leaders_box_title_desc:0 "§C当我们与对应的车万阵营取得联系并招募的对应的角色时，便可以邀请她们来当我们的政府秘书啦!\n在政府界面左上角的按钮可以改变显示国家元首与秘书的头像§!"
@@ -729,46 +736,59 @@
  scientist_trait_aya:0 "$aya_commander_peculiarity$"
  scientist_trait_akyuu:0 "$akyuu_commander_peculiarity$"
  scientist_trait_keine:0 "$keine_commander_peculiarity$"
- scientist_trait_patchouli_desc:0 "§L红魔馆无可争议的头脑，天才中的天才§!"
- scientist_trait_reimu_desc:0 "§L虽然灵梦有着在空中飞行程度的能力，但是她真的会认真科研吗...§!"
- scientist_trait_kanako_desc:0 "§L守失所供奉的战争之神§!"
- scientist_trait_youmu_desc:0 "§L喂饱幽幽子也不比科研简单§!"
- scientist_trait_yagokoro_desc:0 "§L曾经的月之贤者，现在也被尊为月之头脑§!"
- scientist_trait_aya_desc:0 "§L「无双风神」！§!"
- scientist_trait_akyuu_desc:0 "§L第九代御阿礼之子，稗田家的家主，幻想乡的书记§!"
- scientist_trait_keine_desc:0 "§L寺子屋的老师§!"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ scientist_trait_gsk:0 "这位科学家来自幻想乡，对于外界的武器缺乏了解\n"
+ scientist_trait_patchouli_desc:0 "$scientist_trait_gsk$§L红魔馆无可争议的头脑，天才中的天才§!"
+ scientist_trait_reimu_desc:0 "$scientist_trait_gsk$§L虽然灵梦有着在空中飞行程度的能力，但是她真的会认真科研吗...§!"
+ scientist_trait_kanako_desc:0 "$scientist_trait_gsk$§L守失所供奉的战争之神§!"
+ scientist_trait_youmu_desc:0 "$scientist_trait_gsk$§L喂饱幽幽子也不比科研简单§!"
+ scientist_trait_yagokoro_desc:0 "$scientist_trait_gsk$§L曾经的月之贤者，现在也被尊为月之头脑§!"
+ scientist_trait_aya_desc:0 "$scientist_trait_gsk$§L「无双风神」！§!"
+ scientist_trait_akyuu_desc:0 "$scientist_trait_gsk$§L第九代御阿礼之子，稗田家的家主，幻想乡的书记§!"
+ scientist_trait_keine_desc:0 "$scientist_trait_gsk$§L寺子屋的老师§!"
+ sp_gsk_fumo:0 "Fumo"
+ sp_gsk_fumo_desc:0 "§C没有人能够抵挡Fumo的可爱，没有人！！！§!\n在幻想乡决议界面，可以消耗一个fumo来变更幻想乡领导人角色"
+ sp_gsk_fumo_tt:0 "允许在决议界面制造Fumo"
+ has_gsk_leader_idea:0 "幻想乡秘书"
+ gsk_leader_idea_tt:0 "§Y幻想乡秘书§!\n - 政治点数每日： §G+0.30§!\n - 指挥点数每日： §G+0.30§!\n - 稳定度： §G+35.00%§! \n - 战争支持度： §G+35.00%§!\n - 投降界限： §G+30.00%§!\n - 陆军组织度： §G+5.00%§!\n - 海军组织度： §G+5.00%§!\n - 建造速度： §G+2.50%§!\n - 科研速度： §G+2.50%§!"
+ gsk_change_leader_button_tt:0 "点击切换显示幻想乡领袖与政府领袖"
+ remilia_name_s:0 "蕾米莉亚"
+ flandre_name_s:0 "芙兰朵露"
+ sakuya_name_s:0 "咲夜"
+ reisen_name_s:0 "铃仙"
+ gsk_alice_name_s:0 "爱丽丝"
+ shikieiki_name_s:0 "四季映姬"
+ choose_leader_none:0 ""
+ choose_leader_remilia:0 "任命§R$remilia_name$§!为政府秘书"
+ choose_leader_flandre:0 "任命§R$flandre_name$§!为政府秘书"
+ choose_leader_sakuya:0 "任命§R$sakuya_name$§!为政府秘书"
+ choose_leader_patchouli:0 "任命§R$patchouli_name$§!为政府秘书"
+ choose_leader_cirno:0 "任命§R$cirno_name$§!为政府秘书"
+ choose_leader_keine:0 "任命§R$keine_name$§!为政府秘书"
+ choose_leader_akyuu:0 "任命§R$akyuu_name$§!为政府秘书"
+ choose_leader_kosuzu:0 "任命§R$kosuzu_name$§!为政府秘书"
+ choose_leader_reimu:0 "任命§R$reimu_name$§!为政府秘书"
+ choose_leader_marisa:0 "任命§R$marisa_name$§!为政府秘书"
+ choose_leader_sanae:0 "任命§R$sanae_name$§!为政府秘书"
+ choose_leader_kanako:0 "任命§R$kanako_name$§!为政府秘书"
+ choose_leader_suwako:0 "任命§R$suwako_name$§!为政府秘书"
+ choose_leader_aya:0 "任命§R$aya_name$§!为政府秘书"
+ choose_leader_satori:0 "任命§R$satori_name$§!为政府秘书"
+ choose_leader_koishi:0 "任命§R$koishi_name$§!为政府秘书"
+ choose_leader_kokoro:0 "任命§R$kokoro_name$§!为政府秘书"
+ choose_leader_youmu:0 "任命§R$youmu_name$§!为政府秘书"
+ choose_leader_yuyuko:0 "任命§R$yuyuko_name$§!为政府秘书"
+ choose_leader_yukari:0 "任命§R$yukari_name$§!为政府秘书"
+ choose_leader_tewi:0 "任命§R$tewi_name$§!为政府秘书"
+ choose_leader_reisen:0 "任命§R$reisen_name$§!为政府秘书"
+ choose_leader_kaguya:0 "任命§R$kaguya_name$§!为政府秘书"
+ choose_leader_mokou:0 "任命§R$mokou_name$§!为政府秘书"
+ choose_leader_yagokoro:0 "任命§R$yagokoro_name$§!为政府秘书"
+ choose_leader_yuka:0 "任命§R$yuka_name$§!为政府秘书"
+ choose_leader_tenshi:0 "任命§R$tenshi_name$§!为政府秘书"
+ choose_leader_kogasa:0 "任命§R$kogasa_name$§!为政府秘书"
+ choose_leader_shikieiki:0 "任命§R$shikieiki_name$§!为政府秘书"
+ choose_leader_gsk_alice:0 "任命§R$gsk_alice_name$§!为政府秘书"
+ choose_leader_index_d:0 "Fumo剩余：[?gsk_var_number_of_fumo|.0+]\n请确定选择好角色后点击，将消耗一个Fumo以任命选择的角色，在§Y政府界面左上角§!可以更改显示领袖与秘书，若没有多余的Fumo将没有效果"
  remilia_name:0 "蕾米莉亚·斯卡蕾特"
  remilia_name:0 "蕾米莉亚·斯卡蕾特"
  remilia_name:0 "蕾米莉亚·斯卡蕾特"
