fix:bug.txt 9-13

--- a/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
+++ b/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
@@ -104,7 +104,7 @@
  gsk_advisor_keine:0 "人民教师"
  gsk_advisor_akyuu:0 "幻想乡的记忆"
  gsk_write_history_idea0:0 "我们将是书写历史的一代人"
- gsk_decision_description_t:0 "该决议为任务界面，在与幻想乡角色取得联系后，她们都会有一些小任务，你可以在这个界面查看。完成任务后，你会获得她们的回报协助你的国家发展或是可以通过她们的介绍邂逅新角色。决议右下角的政府图标可以切换协助玩家国家的幻想乡角色(待完成)"
+ gsk_decision_description_t:0 "该决议为任务界面，在与幻想乡角色取得联系后，她们都会有一些小任务，你可以在这个界面查看。完成任务后，你会获得她们的回报协助你的国家发展或是可以通过她们的介绍邂逅新角色。决议右下角的政府图标可以切换协助玩家国家的幻想乡角色"
  gsk_active_system_desc:0 "如果想要招募幻想乡角色，你需要提供政治和人力支持以建立联络员，之后派出一定的联络员与幻想乡的角色保持联系。\n§Y当前空余联络员数量为：[?gsk_var_number_of_contact]§!"
  gsk_recruit_character_interaction_vis:0 "显示任务完成提示事件"
  gsk_recruit_character_interaction_unvis:0 "隐藏任务完成提示事件"
@@ -717,7 +717,7 @@
  gsk_begin_add_fumo_flag:0 "停止制作Fumo"
  gsk_change_secretary_tt:0 "可以通过消耗Fomu来更换政府秘书"
  gsk_choose_leaders_box_title:0 "§Y幻想乡内阁§!"
- gsk_choose_leaders_box_title_desc:0 "§C当我们与对应的车万阵营取得联系并招募的对应的角色时，便可以邀请她们来当我们的政府秘书啦!\n在政府界面左上角的按钮可以改变显示国家元首与秘书的头像§!"
+ gsk_choose_leaders_box_title_desc:0 "§C当我们与对应的车万阵营取得联系并招募的对应的角色时，便可以邀请她们来当我们的政府秘书啦!\n在政府界面左上角的按钮可以改变显示国家元首与秘书的头像§!\n当前拥有的Fumo数量：[?gsk_var_number_of_fumo|.0+]"
  pre_button_tt:0 "上一页"
  next_button_tt:0 "下一页"
  choose_scarlet_devil_button_tt:0 "红魔馆"
@@ -747,7 +747,7 @@
  scientist_trait_keine_desc:0 "$scientist_trait_gsk$§L寺子屋的老师§!"
  sp_gsk_fumo:0 "Fumo"
  sp_gsk_fumo_desc:0 "§C没有人能够抵挡Fumo的可爱，没有人！！！§!\n在幻想乡决议界面，可以消耗一个fumo来变更幻想乡领导人角色"
- sp_gsk_fumo_tt:0 "允许在决议界面制造Fumo"
+ sp_gsk_fumo_tt:0 "Fumo数量：§G+1§!\n并且允许在决议界面制造Fumo。"
  has_gsk_leader_idea:0 "幻想乡秘书"
  gsk_leader_idea_tt:0 "§Y幻想乡秘书§!\n - 政治点数每日： §G+0.30§!\n - 指挥点数每日： §G+0.30§!\n - 稳定度： §G+35.00%§! \n - 战争支持度： §G+35.00%§!\n - 投降界限： §G+30.00%§!\n - 陆军组织度： §G+5.00%§!\n - 海军组织度： §G+5.00%§!\n - 建造速度： §G+2.50%§!\n - 科研速度： §G+2.50%§!"
  gsk_change_leader_button_tt:0 "点击切换显示幻想乡领袖与政府领袖"
@@ -789,7 +789,7 @@
  choose_leader_shikieiki:0 "任命§R$shikieiki_name$§!为政府秘书"
  choose_leader_gsk_alice:0 "任命§R$gsk_alice_name$§!为政府秘书"
  choose_leader_index_d:0 "Fumo剩余：[?gsk_var_number_of_fumo|.0+]\n请确定选择好角色后点击，将消耗一个Fumo以任命选择的角色，在§Y政府界面左上角§!可以更改显示领袖与秘书，若没有多余的Fumo将没有效果"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
+ gsk_main_event_idea:0 "地灵殿协助"
  remilia_name:0 "蕾米莉亚·斯卡蕾特"
  remilia_name:0 "蕾米莉亚·斯卡蕾特"
  
