--- a/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
+++ b/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
@@ -1,7 +1,7 @@
 ﻿l_simp_chinese:
  gsk_main_event.1.a:0 "了解了"
  gsk_main_event.1.t:0 "感谢游玩本mod，第一次游玩须知"
- gsk_main_event.1.d:0 "本mod是一个基于东方Project世界观的二创mod，你可以通过决议来探索幻想乡的不同地区，在探索过程中你将遇见不同的事件，通过事件可以把东方的角色招募到你的国家当中并与她们互动。\n\n以下为注意事项：\n作者本人对东方了解不够深入，mod中的所有对话均为二设，可能存在人设崩坏等问题，请以自己心中的幻想乡为准。\n如果不清楚每位人物该如何招募，在steam创意工坊详情页或者角色任务决议中有按钮点击后可以查看所有角色获取路线。\nMOD增加的军工组织中有两个强度较强，可以在决议界面选择开启或关闭，且月都科技军工组织特质§R仅可以§!通过举办月都万象展来提升。\n§R通过月都科技研究的项目请不要随意变更研究的军工组织§!，可能导致月都debuff无法消除。\n§R注意，如果将要发生随机清洗将领的事件，可以在招募事件中选择第二个选项暂缓招募，不然可能使角色失效。§!"
+ gsk_main_event.1.d:0 "本mod是一个基于东方Project世界观的二创mod，你可以通过决议来探索幻想乡的不同地区，在探索过程中你将遇见不同的事件，通过事件可以把东方的角色招募到你的国家当中并与她们互动。\n\n以下为注意事项：\n作者本人对东方了解不够深入，mod中的所有对话均为二设，可能存在人设崩坏等问题，请以自己心中的幻想乡为准。\n如果不清楚每位人物该如何招募，在steam创意工坊详情页或者角色任务决议中有按钮点击后可以查看所有角色获取路线。\n通过完成Fumo的特殊工程，能够将幻想乡角色头像应用于领袖头像。\nMOD增加的军工组织中有两个强度较强，可以在决议界面选择开启或关闭，且月都科技军工组织特质§R仅可以§!通过举办月都万象展来提升。\n§R通过月都科技研究的项目请不要随意变更研究的军工组织§!，可能导致月都debuff无法消除。\n§R注意，如果将要发生随机清洗将领的事件，可以在招募事件中选择第二个选项暂缓招募，不然可能使角色失效。§!"
  gsk_active_the_system:0 "建立一支探险队去探索神秘地点"
  gsk_active_system:0 "探索幻想乡"
  gsk_news_event.2.t:0 "探险队发现神秘地点"
@@ -104,7 +104,7 @@
  gsk_advisor_keine:0 "人民教师"
  gsk_advisor_akyuu:0 "幻想乡的记忆"
  gsk_write_history_idea0:0 "我们将是书写历史的一代人"
- gsk_decision_description_t:0 "该决议为任务界面，在与幻想乡角色取得联系后，她们都会有一些小任务，你可以在这个界面查看。完成任务后，你会获得她们的回报协助你的国家发展或是可以通过她们的介绍邂逅新角色。决议右下角的政府图标可以切换协助玩家国家的幻想乡角色"
+ gsk_decision_description_t:0 "该决议为任务界面，在与幻想乡角色取得联系后，她们都会有一些小任务，你可以在这个界面查看。完成任务后，你会获得她们的回报协助你的国家发展或是可以通过她们的介绍邂逅新角色。决议右下角的政府图标可以切换协助玩家国家的幻想乡角色\n当前拥有的Fumo数量：[?gsk_var_number_of_fumo|.0+]"
  gsk_active_system_desc:0 "如果想要招募幻想乡角色，你需要提供政治和人力支持以建立联络员，之后派出一定的联络员与幻想乡的角色保持联系。\n§Y当前空余联络员数量为：[?gsk_var_number_of_contact]§!"
  gsk_recruit_character_interaction_vis:0 "显示任务完成提示事件"
  gsk_recruit_character_interaction_unvis:0 "隐藏任务完成提示事件"
@@ -717,7 +717,7 @@
  gsk_begin_add_fumo_flag:0 "停止制作Fumo"
  gsk_change_secretary_tt:0 "可以通过消耗Fomu来更换政府秘书"
  gsk_choose_leaders_box_title:0 "§Y幻想乡内阁§!"
- gsk_choose_leaders_box_title_desc:0 "§C当我们与对应的车万阵营取得联系并招募的对应的角色时，便可以邀请她们来当我们的政府秘书啦!\n在政府界面左上角的按钮可以改变显示国家元首与秘书的头像§!\n当前拥有的Fumo数量：[?gsk_var_number_of_fumo|.0+]"
+ gsk_choose_leaders_box_title_desc:0 "§C当我们与对应的车万阵营取得联系并招募的对应的角色时，便可以邀请她们来当我们的政府秘书啦!\n在政府界面左上角的按钮可以改变显示国家元首与秘书的头像§!"
  pre_button_tt:0 "上一页"
  next_button_tt:0 "下一页"
  choose_scarlet_devil_button_tt:0 "红魔馆"
