加了莲子和梅莉

--- a/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
+++ b/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
@@ -727,6 +727,7 @@
  choose_chireiden_button_tt:0 "地灵殿"
  choose_hakugyokurou_button_tt:0 "白玉楼"
  choose_eientei_button_tt:0 "永远亭"
+ choose_hearnandrenko_button_tt:0 "秘封俱乐部"
  choose_other_button_tt:0 "其他角色"
  scientist_trait_patchouli:0 "$patchouli_commander_peculiarity$"
  scientist_trait_reimu:0 "$reimu_commander_peculiarity$"
@@ -788,8 +789,37 @@
  choose_leader_kogasa:0 "任命§R$kogasa_name$§!为政府秘书"
  choose_leader_shikieiki:0 "任命§R$shikieiki_name$§!为政府秘书"
  choose_leader_gsk_alice:0 "任命§R$gsk_alice_name$§!为政府秘书"
+ choose_leader_renko:0 "任命§R$renko_name$§!为政府秘书"
+ choose_leader_hearn:0 "任命§R$hearn_name$§!为政府秘书"
  choose_leader_index_d:0 "Fumo剩余：[?gsk_var_number_of_fumo|.0+]\n请确定选择好角色后点击，将消耗一个Fumo以任命选择的角色，在§Y政府界面左上角§!可以更改显示领袖与秘书，若没有多余的Fumo将没有效果"
  gsk_main_event_idea:0 "地灵殿协助"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- remilia_name:0 "蕾米莉亚·斯卡蕾特"
- 
+
+
+
+ renko_name:0 "宇佐见莲子"
+ renko_name_s:0 "莲子"
+ hearn_name:0 "玛艾露贝莉·赫恩"
+ hearn_name_s:0 "梅莉"
+ gsk_advisor_renko:0 "秘封俱乐部（莲）"
+ renko_is_recruit_flag:0 "宇佐见莲子已经被招募"
+ hearn_is_recruit_flag:0 "玛艾露贝莉·赫恩已经被招募"
+ gsk_advisor_hearn_tt:0 "§Y梅莉的加入能使莲子的干劲翻倍！§!"
+ gsk_advisor_hearn:0 "秘封俱乐部（梅）"
+ advisor_renko_desc:0 "宇佐见莲子是外面世界的一名大学生，在京都的一所大学中专攻超统一物理学，最近在做弦论方面的研究。莲子与玛艾露贝莉·赫恩一同经营着名为秘封俱乐部的社团，进行着在科学世纪探寻遍布四处的结界的活动"
+ advisor_hearn_desc:0 "梅莉是外面世界的一名大学生，在京都的一所大学中专攻相对性精神学。梅莉与宇佐见莲子一同经营着名为秘封俱乐部的社团，进行着在科学世纪探寻遍布四处的结界的活动"
+ renko_commander_peculiarity1:0 "秘封俱乐部（莲）"
+ hearn_commander_peculiarity:0 "秘封俱乐部（梅）"
+ renko_commander_peculiarity:0 "秘封俱乐部（莲）"
+ renko_commander_peculiarity1_desc:0 ""
+ hearn_commander_peculiarity_desc:0 ""
+ renko_commander_peculiarity_desc:0 ""
+ scientist_trait_renko:0 "$renko_commander_peculiarity$"
+ scientist_trait_hearn:0 "$hearn_commander_peculiarity$"
+ scientist_trait_renko_desc:0 "$renko_name$\n§L在京都的一所大学中专攻超统一物理学§!"
+ scientist_trait_hearn_desc:0 "$hearn_name$\n§L在京都的一所大学中专攻相对性精神学§!"
+ gsk_main_event.110.t:0 "来自日本大学的俱乐部"
+ gsk_main_event.110.d:0 "两位来自日本大学的学生来到了你的国家，据她们所言，她们对于我们现在正探索的地方颇有了解，我们也许应该招待下她们"
+ gsk_main_event.110.a.tt:0 "§Y$renko_name$§!与§Y$hearn_name$§!将成为将领"
+ gsk_main_event.110.a:0 "欢迎两位"
+ gsk_main_event.110.b:0 "请暂且等待"
+ gsk_hearnandrenko_2:0 "欢迎秘封俱乐部前来"
