--- a/localisation/english/Gensokyo_l_english.yml
+++ b/localisation/english/Gensokyo_l_english.yml
@@ -709,4 +709,119 @@
  gsk_add_contact_mission_tt:0 "§YNumber of liaison staff：§!§G+1§!"
  gsk_dym_add_contact:0 "Invest in a liaison"
  gsk_begin_add_contact_flag:0 "Stop investing in a liaison"
- 
+
+
+ gsk_begin_add_fumo:0 "制作更多Fumo！"
+ gsk_add_fumo_mission:0 "Fumo锐意制作中..."
+ gsk_end_add_fumo:0 "停止制作Fumo"
+ gsk_add_fumo_mission_tt:0 "Fumo数量：§G+1§!"
+ gsk_dym_add_fumo:0 "制作Fumo经费"
+ gsk_begin_add_fumo_flag:0 "停止制作Fumo"
+ gsk_change_secretary_tt:0 "可以通过消耗Fomu来更换政府秘书"
+ gsk_choose_leaders_box_title:0 "§Y幻想乡内阁§!"
+ gsk_choose_leaders_box_title_desc:0 "§C当我们与对应的车万阵营取得联系并招募的对应的角色时，便可以邀请她们来当我们的政府秘书啦!\n在政府界面左上角的按钮可以改变显示国家元首与秘书的头像§!"
+ pre_button_tt:0 "上一页"
+ next_button_tt:0 "下一页"
+ choose_scarlet_devil_button_tt:0 "红魔馆"
+ choose_human_village_button_tt:0 "人间之里"
+ choose_hakurei_shrine_button_tt:0 "博丽神社"
+ choose_moriya_button_tt:0 "守矢神社"
+ choose_chireiden_button_tt:0 "地灵殿"
+ choose_hakugyokurou_button_tt:0 "白玉楼"
+ choose_eientei_button_tt:0 "永远亭"
+ choose_hearnandrenko_button_tt:0 "秘封俱乐部"
+ choose_other_button_tt:0 "其他角色"
+ scientist_trait_patchouli:0 "$patchouli_commander_peculiarity$"
+ scientist_trait_reimu:0 "$reimu_commander_peculiarity$"
+ scientist_trait_kanako:0 "$kanako_commander_peculiarity$"
+ scientist_trait_youmu:0 "$youmu_commander_peculiarity$"
+ scientist_trait_yagokoro:0 "$yagokoro_commander_peculiarity$"
+ scientist_trait_aya:0 "$aya_commander_peculiarity$"
+ scientist_trait_akyuu:0 "$akyuu_commander_peculiarity$"
+ scientist_trait_keine:0 "$keine_commander_peculiarity$"
+ scientist_trait_gsk:0 "这位科学家来自幻想乡，对于外界的武器缺乏了解\n"
+ scientist_trait_patchouli_desc:0 "$scientist_trait_gsk$§L红魔馆无可争议的头脑，天才中的天才§!"
+ scientist_trait_reimu_desc:0 "$scientist_trait_gsk$§L虽然灵梦有着在空中飞行程度的能力，但是她真的会认真科研吗...§!"
+ scientist_trait_kanako_desc:0 "$scientist_trait_gsk$§L守失所供奉的战争之神§!"
+ scientist_trait_youmu_desc:0 "$scientist_trait_gsk$§L喂饱幽幽子也不比科研简单§!"
+ scientist_trait_yagokoro_desc:0 "$scientist_trait_gsk$§L曾经的月之贤者，现在也被尊为月之头脑§!"
+ scientist_trait_aya_desc:0 "$scientist_trait_gsk$§L「无双风神」！§!"
+ scientist_trait_akyuu_desc:0 "$scientist_trait_gsk$§L第九代御阿礼之子，稗田家的家主，幻想乡的书记§!"
+ scientist_trait_keine_desc:0 "$scientist_trait_gsk$§L寺子屋的老师§!"
+ sp_gsk_fumo:0 "Fumo"
+ sp_gsk_fumo_desc:0 "§C没有人能够抵挡Fumo的可爱，没有人！！！§!\n在幻想乡决议界面，可以消耗一个fumo来变更幻想乡领导人角色"
+ sp_gsk_fumo_tt:0 "Fumo数量：§G+1§!\n并且允许在决议界面制造Fumo。"
+ has_gsk_leader_idea:0 "幻想乡秘书"
+ gsk_leader_idea_tt:0 "§Y幻想乡秘书§!\n - 政治点数每日： §G+0.30§!\n - 指挥点数每日： §G+0.30§!\n - 稳定度： §G+35.00%§! \n - 战争支持度： §G+35.00%§!\n - 投降界限： §G+30.00%§!\n - 陆军组织度： §G+5.00%§!\n - 海军组织度： §G+5.00%§!\n - 建造速度： §G+2.50%§!\n - 科研速度： §G+2.50%§!"
+ gsk_change_leader_button_tt:0 "点击切换显示幻想乡领袖与政府领袖"
+ remilia_name_s:0 "蕾米莉亚"
+ flandre_name_s:0 "芙兰朵露"
+ sakuya_name_s:0 "咲夜"
+ reisen_name_s:0 "铃仙"
+ gsk_alice_name_s:0 "爱丽丝"
+ shikieiki_name_s:0 "四季映姬"
+ choose_leader_none:0 ""
+ choose_leader_remilia:0 "任命§R$remilia_name$§!为政府秘书"
+ choose_leader_flandre:0 "任命§R$flandre_name$§!为政府秘书"
+ choose_leader_sakuya:0 "任命§R$sakuya_name$§!为政府秘书"
+ choose_leader_patchouli:0 "任命§R$patchouli_name$§!为政府秘书"
+ choose_leader_cirno:0 "任命§R$cirno_name$§!为政府秘书"
+ choose_leader_keine:0 "任命§R$keine_name$§!为政府秘书"
+ choose_leader_akyuu:0 "任命§R$akyuu_name$§!为政府秘书"
+ choose_leader_kosuzu:0 "任命§R$kosuzu_name$§!为政府秘书"
+ choose_leader_reimu:0 "任命§R$reimu_name$§!为政府秘书"
+ choose_leader_marisa:0 "任命§R$marisa_name$§!为政府秘书"
+ choose_leader_sanae:0 "任命§R$sanae_name$§!为政府秘书"
+ choose_leader_kanako:0 "任命§R$kanako_name$§!为政府秘书"
+ choose_leader_suwako:0 "任命§R$suwako_name$§!为政府秘书"
+ choose_leader_aya:0 "任命§R$aya_name$§!为政府秘书"
+ choose_leader_satori:0 "任命§R$satori_name$§!为政府秘书"
+ choose_leader_koishi:0 "任命§R$koishi_name$§!为政府秘书"
+ choose_leader_kokoro:0 "任命§R$kokoro_name$§!为政府秘书"
+ choose_leader_youmu:0 "任命§R$youmu_name$§!为政府秘书"
+ choose_leader_yuyuko:0 "任命§R$yuyuko_name$§!为政府秘书"
+ choose_leader_yukari:0 "任命§R$yukari_name$§!为政府秘书"
+ choose_leader_tewi:0 "任命§R$tewi_name$§!为政府秘书"
+ choose_leader_reisen:0 "任命§R$reisen_name$§!为政府秘书"
+ choose_leader_kaguya:0 "任命§R$kaguya_name$§!为政府秘书"
+ choose_leader_mokou:0 "任命§R$mokou_name$§!为政府秘书"
+ choose_leader_yagokoro:0 "任命§R$yagokoro_name$§!为政府秘书"
+ choose_leader_yuka:0 "任命§R$yuka_name$§!为政府秘书"
+ choose_leader_tenshi:0 "任命§R$tenshi_name$§!为政府秘书"
+ choose_leader_kogasa:0 "任命§R$kogasa_name$§!为政府秘书"
+ choose_leader_shikieiki:0 "任命§R$shikieiki_name$§!为政府秘书"
+ choose_leader_gsk_alice:0 "任命§R$gsk_alice_name$§!为政府秘书"
+ choose_leader_renko:0 "任命§R$renko_name$§!为政府秘书"
+ choose_leader_hearn:0 "任命§R$hearn_name$§!为政府秘书"
+ choose_leader_index_d:0 "Fumo剩余：[?gsk_var_number_of_fumo|.0+]\n请确定选择好角色后点击，将消耗一个Fumo以任命选择的角色，在§Y政府界面左上角§!可以更改显示领袖与秘书，若没有多余的Fumo将没有效果"
+ gsk_main_event_idea:0 "地灵殿协助"
+
+
+
+ renko_name:0 "宇佐见莲子"
+ renko_name_s:0 "莲子"
+ hearn_name:0 "玛艾露贝莉·赫恩"
+ hearn_name_s:0 "梅莉"
+ gsk_advisor_renko:0 "秘封俱乐部（莲）"
+ renko_is_recruit_flag:0 "宇佐见莲子已经被招募"
+ hearn_is_recruit_flag:0 "玛艾露贝莉·赫恩已经被招募"
+ gsk_advisor_hearn_tt:0 "§Y梅莉的加入能使莲子的干劲翻倍！§!"
+ gsk_advisor_hearn:0 "秘封俱乐部（梅）"
+ advisor_renko_desc:0 "宇佐见莲子是外面世界的一名大学生，在京都的一所大学中专攻超统一物理学，最近在做弦论方面的研究。莲子与玛艾露贝莉·赫恩一同经营着名为秘封俱乐部的社团，进行着在科学世纪探寻遍布四处的结界的活动"
+ advisor_hearn_desc:0 "梅莉是外面世界的一名大学生，在京都的一所大学中专攻相对性精神学。梅莉与宇佐见莲子一同经营着名为秘封俱乐部的社团，进行着在科学世纪探寻遍布四处的结界的活动"
+ renko_commander_peculiarity1:0 "秘封俱乐部（莲）"
+ hearn_commander_peculiarity:0 "秘封俱乐部（梅）"
+ renko_commander_peculiarity:0 "秘封俱乐部（莲）"
+ renko_commander_peculiarity1_desc:0 ""
+ hearn_commander_peculiarity_desc:0 ""
+ renko_commander_peculiarity_desc:0 ""
+ scientist_trait_renko:0 "$renko_commander_peculiarity$"
+ scientist_trait_hearn:0 "$hearn_commander_peculiarity$"
+ scientist_trait_renko_desc:0 "$renko_name$\n§L在京都的一所大学中专攻超统一物理学§!"
+ scientist_trait_hearn_desc:0 "$hearn_name$\n§L在京都的一所大学中专攻相对性精神学§!"
+ gsk_main_event.110.t:0 "来自日本大学的俱乐部"
+ gsk_main_event.110.d:0 "两位来自日本大学的学生来到了你的国家，据她们所言，她们对于我们现在正探索的地方颇有了解，我们也许应该招待下她们"
+ gsk_main_event.110.a.tt:0 "§Y$renko_name$§!与§Y$hearn_name$§!将成为将领"
+ gsk_main_event.110.a:0 "欢迎两位"
+ gsk_main_event.110.b:0 "请暂且等待"
+ gsk_hearnandrenko_2:0 "欢迎秘封俱乐部前来"
