修了领袖头像，改了冲突

--- a/localisation/english/Gensokyo_l_english.yml
+++ b/localisation/english/Gensokyo_l_english.yml
@@ -490,7 +490,7 @@
   gsk_kapa_design_bureau08:0 "Using Tongbei"
   gsk_kapa_design_bureau09:0 "Kappa working overtime"
   gsk_kapa_design_bureau10:0 "Medium Tank Specialization"
-  gsk_kapa_design_bureau11:0 "Heavy Tank Specialization"
+  gsk_kapa_design_bureau11:0 "General Purpose Helicopter Expertise"
   gsk_kapa_design_bureau12:0 "Ammo Rack Modification"
   gsk_kapa_design_bureau13:0 "Suspension Improvements"
   gsk_kapa_design_bureau14:0 "Gun Barrel Reinforcement"
