--- a/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
+++ b/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
@@ -490,7 +490,7 @@
  gsk_kapa_design_bureau08:0 "利用通背"
  gsk_kapa_design_bureau09:0 "河童加班"
  gsk_kapa_design_bureau10:0 "主站坦克专精"
- gsk_kapa_design_bureau11:0 "通用直升机专精   §R目前在TFR中,直升机速度有bug§!"
+ gsk_kapa_design_bureau11:0 "通用直升机专精"
  gsk_kapa_design_bureau12:0 "弹药架改装"
  gsk_kapa_design_bureau13:0 "悬挂改进"
  gsk_kapa_design_bureau14:0 "反坦克武器"
