--- a/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
+++ b/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
@@ -823,3 +823,4 @@
  gsk_main_event.110.a:0 "欢迎两位"
  gsk_main_event.110.b:0 "请暂且等待"
  gsk_hearnandrenko_2:0 "欢迎秘封俱乐部前来"
+ gsk_dym_sanae_land_cruiser:0 "§7早苗的好奇心§!"
