绀珠传GFX资源

--- a/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
+++ b/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
@@ -370,6 +370,15 @@
  gsk_role_list_use24:0 "为小铃使用蓬莱提神药"
  gsk_role_list_use25:0 "为幽香使用蓬莱提神药"
  gsk_role_list_use26:0 "为爱丽丝使用蓬莱提神药"
+ gsk_role_list_use27:0 "为$renko_name$使用蓬莱提神药"
+ gsk_role_list_use28:0 "为$hearn_name$使用蓬莱提神药"
+ gsk_role_list_use29:0 "为$seiran_name$使用蓬莱提神药"
+ gsk_role_list_use30:0 "为$ringo_name$使用蓬莱提神药"
+ gsk_role_list_use31:0 "为$doremy_name$使用蓬莱提神药"
+ gsk_role_list_use32:0 "为$clownpiece_name$使用蓬莱提神药"
+ gsk_role_list_use33:0 "为$sagume_name$使用蓬莱提神药"
+ gsk_role_list_use34:0 "为$junko_name$使用蓬莱提神药"
+ gsk_role_list_use35:0 "为$hecatia_name$使用蓬莱提神药"
  kogasa_name:0 "多多良小伞"
  kokoro_name:0 "秦心"
  yuka_name:0 "风见幽香"
@@ -791,10 +800,15 @@
  choose_leader_gsk_alice:0 "任命§R$gsk_alice_name$§!为政府秘书"
  choose_leader_renko:0 "任命§R$renko_name$§!为政府秘书"
  choose_leader_hearn:0 "任命§R$hearn_name$§!为政府秘书"
+ choose_leader_seiran:0 "任命§R$seiran_name$§!为政府秘书"
+ choose_leader_ringo:0 "任命§R$ringo_name$§!为政府秘书"
+ choose_leader_doremy:0 "任命§R$doremy_name$§!为政府秘书"
+ choose_leader_sagume:0 "任命§R$sagume_name$§!为政府秘书"
+ choose_leader_clownpiece:0 "任命§R$clownpiece_name$§!为政府秘书"
+ choose_leader_junko:0 "任命§R$junko_name$§!为政府秘书"
+ choose_leader_hecatia:0 "任命§R$hecatia_name$§!为政府秘书"
  choose_leader_index_d:0 "Fumo剩余：[?gsk_var_number_of_fumo|.0+]\n请确定选择好角色后点击，将消耗一个Fumo以任命选择的角色，在§Y政府界面左上角§!可以更改显示领袖与秘书，若没有多余的Fumo将没有效果"
  gsk_main_event_idea:0 "地灵殿协助"
-
-
 
  renko_name:0 "宇佐见莲子"
  renko_name_s:0 "莲子"
@@ -824,3 +838,42 @@
  gsk_main_event.110.b:0 "请暂且等待"
  gsk_hearnandrenko_2:0 "欢迎秘封俱乐部前来"
  gsk_dym_sanae_land_cruiser:0 "§7早苗的好奇心§!"
+
+ seiran_name:0 "清兰"
+ seiran_commander_peculiarity:0 "浅葱色的Eagle Rabbit"
+ seiran_commander_peculiarity_desc:0 ""
+ seiran_is_recruit_flag:0 "$seiran_name$已经招募"
+ ringo_name:0 "铃瑚"
+ ringo_commander_peculiarity:0 "橘色的Eagle Rabbit"
+ ringo_commander_peculiarity_desc:0 ""
+ ringo_is_recruit_flag:0 "$ringo_name$已经招募"
+ doremy_name:0 "哆来咪·苏伊特"
+ doremy_name_s:0 "哆来咪"
+ doremy_commander_peculiarity:0 "梦之支配者"
+ doremy_commander_peculiarity_desc:0 ""
+ doremy_is_recruit_flag:0 "$doremy_name$已经招募"
+ sagume_name:0 "稀神探女"
+ sagume_commander_peculiarity:0 "招来口舌之祸的女神"
+ sagume_commander_peculiarity_desc:0 ""
+ sagume_is_recruit_flag:0 "$sagume_name$已经招募"
+ clownpiece_name:0 "克劳恩皮丝"
+ clownpiece_commander_peculiarity:0 "地狱的妖精"
+ clownpiece_commander_peculiarity_desc:0 ""
+ clownpiece_is_recruit_flag:0 "$clownpiece_name$已经招募"
+ junko_name:0 "纯狐"
+ junko_commander_peculiarity:0 "纯化程度的能力"
+ junko_commander_peculiarity_desc:0 ""
+ junko_is_recruit_flag:0 "$junko_name$已经招募"
+ hecatia_name:0 "赫卡提亚·拉碧斯拉祖利"
+ hecatia_name_s:0 "赫卡提亚"
+ hecatia_commander_peculiarity:0 "地狱的女神"
+ hecatia_commander_peculiarity_desc:0 ""
+ hecatia_is_recruit_flag:0 "$hecatia_name$已经招募"
+ gsk_kanjuden:0 "接待月都的使者"
+ gsk_kanjuden_2:0 "梦境之地"
+ gsk_main_event.120.a.tt:0 "§Y$seiran_name$§!，§Y$ringo_name$§!将成为将领\n$gsk_main_event.recruit.tt$"
+ gsk_main_event.121.a.tt:0 "§Y$doremy_name$§!，§Y$clownpiece_name$§!，§Y$sagume_name$§!将成为将领\n$gsk_main_event.recruit.tt$"
+ kanjuden_quest0:0 "月都的求援信"
+ gsk_hire_event.121.t:0 "月都的求援信"
+ gsk_hire_event.121.d:0 "在我们与月都来的这几位使者深入交流后，我们了解到，她们来地面的目的是为了求援，现在的月都与月之民正受到未知的敌人侵略，我们或许能支援她们。"
+ gsk_hire_event.121.a.tt:0 "幻想乡的规矩可不就是不打不相识，武器拿去，支援她们！"
