--- a/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
+++ b/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
@@ -284,8 +284,10 @@
  reisen_name:0 "铃仙·优昙华院·因幡"
  tewi_name:0 "因幡天为"
  gsk_race_moonrabbit:0 "种族:月兔"
+ gsk_race_moonrabbit_navy:0 "种族:月兔"
  gsk_race_rabbit_navy:0 "种族:妖怪兔"
  gsk_race_moonrabbit_desc:0 ""
+ gsk_race_moonrabbit_navy_desc:0 ""
  gsk_race_rabbit_navy_desc:0 ""
  reisen_commander_peculiarity:0 "狂气的月兔"
  reisen_commander_peculiarity_desc:0 ""
@@ -746,6 +748,8 @@
  scientist_trait_aya:0 "$aya_commander_peculiarity$"
  scientist_trait_akyuu:0 "$akyuu_commander_peculiarity$"
  scientist_trait_keine:0 "$keine_commander_peculiarity$"
+ scientist_trait_doremy:0 "$doremy_commander_peculiarity_navy$"
+ scientist_trait_sagume:0 "$sagume_commander_peculiarity$"
  scientist_trait_gsk:0 "这位科学家来自幻想乡，对于外界的武器缺乏了解\n"
  scientist_trait_patchouli_desc:0 "$scientist_trait_gsk$§L红魔馆无可争议的头脑，天才中的天才§!"
  scientist_trait_reimu_desc:0 "$scientist_trait_gsk$§L虽然灵梦有着在空中飞行程度的能力，但是她真的会认真科研吗...§!"
@@ -755,6 +759,8 @@
  scientist_trait_aya_desc:0 "$scientist_trait_gsk$§L「无双风神」！§!"
  scientist_trait_akyuu_desc:0 "$scientist_trait_gsk$§L第九代御阿礼之子，稗田家的家主，幻想乡的书记§!"
  scientist_trait_keine_desc:0 "$scientist_trait_gsk$§L寺子屋的老师§!"
+ scientist_trait_sagume_desc:0 "§L这项目是绝对研究不出来的    ——探女如是说§!"
+ scientist_trait_doremy_desc:0 "§L梦里也能研究§!"
  sp_gsk_fumo:0 "Fumo"
  sp_gsk_fumo_desc:0 "§C没有人能够抵挡Fumo的可爱，没有人！！！§!\n在幻想乡决议界面，可以消耗一个fumo来变更幻想乡领导人角色"
  sp_gsk_fumo_tt:0 "Fumo数量：§G+1§!\n并且允许在决议界面制造Fumo。"
@@ -806,7 +812,7 @@
  choose_leader_sagume:0 "任命§R$sagume_name$§!为政府秘书"
  choose_leader_clownpiece:0 "任命§R$clownpiece_name$§!为政府秘书"
  choose_leader_junko:0 "任命§R$junko_name$§!为政府秘书"
- choose_leader_hecatia:0 "任命§R$hecatia_name$§!为政府秘书"
+ choose_leader_hecatia:0 "任命§R$hecatia_name_s$§!为政府秘书"
  choose_leader_index_d:0 "Fumo剩余：[?gsk_var_number_of_fumo|.0+]\n请确定选择好角色后点击，将消耗一个Fumo以任命选择的角色，在§Y政府界面左上角§!可以更改显示领袖与秘书，若没有多余的Fumo将没有效果"
  gsk_main_event_idea:0 "地灵殿协助"
 
@@ -843,19 +849,23 @@
  seiran_commander_peculiarity:0 "浅葱色的Eagle Rabbit"
  seiran_commander_peculiarity_desc:0 ""
  seiran_is_recruit_flag:0 "$seiran_name$已经招募"
+ gsk_advisor_seiran:0 "底层打工兔"
+ advisor_seiran_desc:0 "名副其实的炮灰。\n在被称为Eagle Rabbit的地面调查部队之中\n负责潜伏渗透这项最危险的工作。\n尽管工作危险，薪水却很低。"
  ringo_name:0 "铃瑚"
- ringo_commander_peculiarity:0 "橘色的Eagle Rabbit"
- ringo_commander_peculiarity_desc:0 ""
+ ringo_commander_peculiarity_navy:0 "橘色的Eagle Rabbit"
+ ringo_commander_peculiarity_navy_desc:0 ""
  ringo_is_recruit_flag:0 "$ringo_name$已经招募"
  doremy_name:0 "哆来咪·苏伊特"
  doremy_name_s:0 "哆来咪"
- doremy_commander_peculiarity:0 "梦之支配者"
- doremy_commander_peculiarity_desc:0 ""
+ doremy_commander_peculiarity_navy:0 "梦之支配者"
+ doremy_commander_peculiarity_navy_desc:0 ""
  doremy_is_recruit_flag:0 "$doremy_name$已经招募"
  sagume_name:0 "稀神探女"
  sagume_commander_peculiarity:0 "招来口舌之祸的女神"
  sagume_commander_peculiarity_desc:0 ""
  sagume_is_recruit_flag:0 "$sagume_name$已经招募"
+ gsk_advisor_sagume:0 "沉默的实干家"
+ advisor_sagume_desc:0 "性格寡言，其理由源自能力。对于某种事态，一旦经过自己的口中（尤其是对和事情有关的人），这个事态就会向反方向发展。相似的角色还有天邪鬼，但她是位居天邪鬼之上的神灵。天邪鬼只会说自己反对的事情，但她会通过自己说的事情让世界向反方向发展。\n如果她想做成什么事情，那一定悉数失败，如果有什么坏事发生，那她的能力一定可以使事态好转。但那并不意味着一定会对自己好转。正所谓，祸从口出的神灵。"
  clownpiece_name:0 "克劳恩皮丝"
  clownpiece_commander_peculiarity:0 "地狱的妖精"
  clownpiece_commander_peculiarity_desc:0 ""
@@ -864,16 +874,39 @@
  junko_commander_peculiarity:0 "纯化程度的能力"
  junko_commander_peculiarity_desc:0 ""
  junko_is_recruit_flag:0 "$junko_name$已经招募"
+ gsk_advisor_junko:0 "无穷无尽的仇怨"
+ advisor_junko_desc:0 "对于月之民抱有怨恨的存在。\n自身也是被怨恨纯化的灵。\n她已经连自己是什么人的情报都不需要了。"
  hecatia_name:0 "赫卡提亚·拉碧斯拉祖利"
  hecatia_name_s:0 "赫卡提亚"
  hecatia_commander_peculiarity:0 "地狱的女神"
  hecatia_commander_peculiarity_desc:0 ""
  hecatia_is_recruit_flag:0 "$hecatia_name$已经招募"
- gsk_kanjuden:0 "接待月都的使者"
- gsk_kanjuden_2:0 "梦境之地"
- gsk_main_event.120.a.tt:0 "§Y$seiran_name$§!，§Y$ringo_name$§!将成为将领\n$gsk_main_event.recruit.tt$"
- gsk_main_event.121.a.tt:0 "§Y$doremy_name$§!，§Y$clownpiece_name$§!，§Y$sagume_name$§!将成为将领\n$gsk_main_event.recruit.tt$"
+ gsk_kanjuden:0 "月都的斥候"
+ gsk_kanjuden_2:0 "正式与月都取得联系"
+ gsk_kanjuden_2_desc:0 "§L在月都斥候的介绍下，月都的一位高层人物为我们发来了一段信号，或许我们应该了解下她们的诉求§!"
+ gsk_kanjuden_3:0 "援助月之民"
+ gsk_main_event.120.a.tt:0 "§Y$seiran_name$§!将成为将领，§C$doremy_name$§!将成为海军将领\n$gsk_main_event.recruit.tt$"
+ gsk_hire_event.121.a.tt:0 "§C$doremy_name$§!将成为海军将领，§Y$sagume_name$§!将成为将领"
  kanjuden_quest0:0 "月都的求援信"
- gsk_hire_event.121.t:0 "月都的求援信"
- gsk_hire_event.121.d:0 "在我们与月都来的这几位使者深入交流后，我们了解到，她们来地面的目的是为了求援，现在的月都与月之民正受到未知的敌人侵略，我们或许能支援她们。"
- gsk_hire_event.121.a.tt:0 "幻想乡的规矩可不就是不打不相识，武器拿去，支援她们！"
+ gsk_hire_event.121.t:0 "月之都求援书"
+ gsk_hire_event.121.d:0 "致 幻想乡诸位贤者与勇者：\n\n谨启。\n\n当此信跨越星海抵达诸位手中时，月之都正深陷前所未有的劫难。我等月之民素以清冷自持、隔绝尘世为誓，然今时之危已非月之力可独挽，故不得不俯首恳请地上勇者施以援手——此事关乎月之文明的存续，亦牵连幻想乡安宁。\n\n月之都遭无形之敌侵蚀，静海之底暗涌灾厄。彼方邪力以「金属之蛛」为触须，散播死寂、吞噬生命，其毒雾甚至渗入幻想乡山林。月都本为永恒净土，今却被「冻结」于时光裂隙之中，生灵尽湮，唯余寒冰般的寂静。更有地狱之妖与远古怨灵（注：即纯狐）盘踞里月，其力可污秽月髓，动摇我等存在之根基。\n\n月之民因身负「纯净」而受制于敌之污秽术法，然地上人类无垢之心恰为破局之钥。望诸位勇者借永远亭所制「绀珠之药」抵御月都寒毒，循月兔于风神湖畔所辟密道，直抵静海核心，斩断敌首之谋。月之贤者稀神探女已逆转因果，将胜机托付于诸君弹幕之间。\n\n月之民虽耻于言利，然知恩必偿。若危机得解，月都将开放千年秘藏之智——星轨仪制法、永生药残卷，乃至抵御「都市传说异变」之法，皆可赠予地上盟友。另，永远亭与诸位的羁绊，亦为月都诚意之证。\n\n此非月之民的高傲请托，而是濒灭者的悲鸣。望博丽巫女破结界之迷，雾雨魔女解灵异珠之咒，天狗斥候寻敌踪之隙……诸君每进一步，皆是为月与地的未来拓路。\n\n—— 稀神探女 敬上"
+ gsk_hire_event.121.a:0 "我们可以为她们支援武器"
+ gsk_hire_event.121.b:0 "我知道一位月战老兵或许可以帮到她们"
+ gsk_hire_event.121.b.tt:0 "§C$doremy_name$§!将成为海军将领，§Y$sagume_name$§!将成为将领\n铃仙将被派往月都，她将在战争结束后回来"
+ reisen_is_assit_flag:0 "铃仙正在协助月之民"
+ gsk_hire_event.122.t:0 "月战的结束"
+ gsk_hire_event.122.d:0 "随着月兔们的节节胜利，她们终于是见到了月战的主谋，不过与我们意想不同的是主谋似乎并不非常在意月都的存续，在月兔们发现她时，也许是月兔们武器上沾染了地面的污秽，又也许是她自己不想再继续了，总之，她便带着那些侵略月都的妖精一齐离开了月都。"
+ gsk_hire_event.122.a:0 "无论如何，月上的战争是结束了"
+ gsk_hire_event.122.a.tt:0 "§Y$clownpiece_name$，$junko_name$，$hecatia_name$§!将成为将领"
+ gsk_hire_event.123.t:0 "意外的结束"
+ gsk_hire_event.123.d:0 "据月兔们所说，月战的主谋似乎非常看重铃仙，铃仙一通过第四槐安通道，月战的主谋就现身了，然后对着铃仙说着什么-不共戴天之仇啊，我的儿子啊，嫦娥啊之类的月兔们听不懂的话就开始抱着铃仙狂吸，然后就抛下那些侵略月都的妖精不管了"
+ gsk_hire_event.123.a:0 "再苦一苦铃仙吧"
+ reisen_commander_peculiarity2:0 "纯狐的爱"
+ gsk_race_tapir_navy:0 "种族:貘"
+ gsk_race_tapir_navy_desc:0 ""
+ choose_kanjuden_button_tt:0 "绀珠传"
+ gsk_industrial_concern:0 "月兔总工会"
+ gsk_idea_industrial_concern:0 "月兔们，联合起来！"
+ gsk_tech:0 "月都研究所"
+ gsk_idea_research_institute:0 "莫不知名高校"
+ kanjuden_event_completed:0 "月都事件顺利解决"
