角色内阁dds图标

--- a/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
+++ b/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
@@ -759,7 +759,7 @@
  scientist_trait_aya_desc:0 "$scientist_trait_gsk$§L「无双风神」！§!"
  scientist_trait_akyuu_desc:0 "$scientist_trait_gsk$§L第九代御阿礼之子，稗田家的家主，幻想乡的书记§!"
  scientist_trait_keine_desc:0 "$scientist_trait_gsk$§L寺子屋的老师§!"
- scientist_trait_sagume_desc:0 "§L这项目是绝对研究不出来的    ——探女如是说§!"
+ scientist_trait_sagume_desc:0 "§L这项目是绝对研究不出来的     —探女如是说§!"
  scientist_trait_doremy_desc:0 "§L梦里也能研究§!"
  sp_gsk_fumo:0 "Fumo"
  sp_gsk_fumo_desc:0 "§C没有人能够抵挡Fumo的可爱，没有人！！！§!\n在幻想乡决议界面，可以消耗一个fumo来变更幻想乡领导人角色"
@@ -908,5 +908,5 @@
  gsk_industrial_concern:0 "月兔总工会"
  gsk_idea_industrial_concern:0 "月兔们，联合起来！"
  gsk_tech:0 "月都研究所"
- gsk_idea_research_institute:0 "莫不知名高校"
+ gsk_idea_research_institute:0 "985工程"
  kanjuden_event_completed:0 "月都事件顺利解决"
