把莲子忘了

--- a/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
+++ b/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
@@ -584,7 +584,7 @@
  eientei_quest6:0 "永远亭任务:举办月都万象展!"
  eientei_quest6_desc:0 "月之都的种种特色，诸如历史文物、科技成果、学术文献等等给予了我们军工组织极大的帮助"
  gsk_main_event.2.t:0 "人物路线指南"
- gsk_main_event.2.d:0 "以下为路线指南:\n拜访博丽神社：博丽灵梦，雾雨魔理沙。\n拜访人间之里：上白泽慧音，稗田阿求。\n拜访守矢神社：东风谷早苗，八坂神奈子，洩矢诹访子，等待30天后弹出事件：射命丸文来访。\n探索红魔馆：蕾米莉亚·斯卡蕾特，十六夜咲夜，完成任务:芙兰想要玩耍后获得：芙兰朵露·斯卡蕾特，帕秋莉·诺蕾姬，等待35天弹出事件获得角色：琪露诺。\n探索地灵殿：古明地觉，古明地恋。\n探索白玉楼：魂魄妖梦，西行寺幽幽子。\n探索永远亭：因幡帝，铃仙·优昙华院·因幡。\n特殊人物：\n爱丽丝·玛格特洛依德：在招募了帕秋莉，魔理沙后触发来访事件。\n八意永琳，蓬莱山辉夜，藤原妹红：拜访永远亭和招募慧音后完成任务：让NNET姬出门后获得。\n本居小铃：激活人里任务小铃的拯救阿求作战后获得。\n\n其他注意事项:\n如果希望提升人物领导部队数量，可以在招募了永玲后研发蓬莱提神药用于角色。\n青蛙头饰不仅能用来完成任务，还能放于部队中提升地形适应性。\n通过任务，有些角色的特质是可以升级的。"
+ gsk_main_event.2.d:0 "以下为路线指南:\n拜访博丽神社：博丽灵梦，雾雨魔理沙。\n拜访人间之里：上白泽慧音，稗田阿求。\n拜访守矢神社：东风谷早苗，八坂神奈子，洩矢诹访子，等待30天后弹出事件：射命丸文来访。\n探索红魔馆：蕾米莉亚·斯卡蕾特，十六夜咲夜，完成任务:芙兰想要玩耍后获得：芙兰朵露·斯卡蕾特，帕秋莉·诺蕾姬，等待35天弹出事件获得角色：琪露诺。\n探索地灵殿：古明地觉，古明地恋。\n探索白玉楼：魂魄妖梦，西行寺幽幽子。\n探索永远亭：因幡帝，铃仙·优昙华院·因幡。\n月都的斥候：招募清兰与铃瑚，解锁与月都高层联系，招募探女，哆来咪。月都求援信后事件招募纯狐与赫卡。\n特殊人物：\n爱丽丝·玛格特洛依德：在招募了帕秋莉，魔理沙后触发来访事件。\n八意永琳，蓬莱山辉夜，藤原妹红：拜访永远亭和招募慧音后完成任务：让NNET姬出门后获得。\n本居小铃：激活人里任务小铃的拯救阿求作战后获得。\n\n其他注意事项:\n如果希望提升人物领导部队数量，可以在招募了永玲后研发蓬莱提神药用于角色。\n青蛙头饰不仅能用来完成任务，还能放于部队中提升地形适应性。\n通过任务，有些角色的特质是可以升级的。"
  gsk_main_event.2.a:0 "祝您游玩愉快"
  gsk_help_button.tt:0 "显示人物路线指南"
  eientei_exhibition_just_open_flag:0 "150天内举办过月都万象展"
