--- a/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
+++ b/localisation/simp_chinese/Gensokyo_l_simp_chinese.yml
@@ -709,6 +709,7 @@
  GSK_DEF: "幻想乡"
  GSK_ADJ: "幻想乡" 
  gsk_begin_add_contact:0 "开始投资建立联络员"
+ gsk_begin_add_contact_2:0 "开始投资建立联络员"
  gsk_number_of_expeditions_1_tt:0 "至少有§Y1§!位空闲的联络员"
  gsk_number_of_expeditions_2_tt:0 "至少有§Y2§!位空闲的联络员"
  gsk_number_of_expeditions_3_tt:0 "至少有§Y3§!位空闲的联络员"
@@ -719,6 +720,7 @@
  gsk_end_add_contact:0 "停止投资建立联络员"
  gsk_add_contact_mission_tt:0 "联络员数量：§G+1§!"
  gsk_dym_add_contact:0 "投资建立联络员"
+ gsk_dym_add_contact_1:0 "投资建立联络员"
  gsk_begin_add_contact_flag:0 "停止建立联络员"
  gsk_begin_add_fumo:0 "制作更多Fumo！"
  gsk_add_fumo_mission:0 "Fumo锐意制作中..."
